test/bad/classes/type07.px

class A def
    Int x

class B(A) def
    Int y


[A]*Int t = [B()], 6
